feat(agentic-subprocess): Refine llm-connector module - Add validation that tools requested by LLM exist in supplied catalogue - Improved variable naming in ConversationMapper - Improved test naming across module - Fixed tests to use assertJ instead of jupiter for consistency across module
Signed-off-by: Tom Stavert <tstavert@scottlogic.com>