@@ -6,7 +6,10 @@ import org.finos.fluxnova.bpm.engine.shared.model.ConversationEntry;
 import org.finos.fluxnova.bpm.engine.shared.model.LlmResponse;
 import org.finos.fluxnova.bpm.engine.shared.model.ToolCallRequest;
 import org.junit.jupiter.api.Test;
-import org.springframework.ai.chat.messages.*;
+import org.springframework.ai.chat.messages.AssistantMessage;
+import org.springframework.ai.chat.messages.Message;
+import org.springframework.ai.chat.messages.MessageType;
+import org.springframework.ai.chat.messages.ToolResponseMessage;
 import org.springframework.ai.chat.model.ChatResponse;
 import org.springframework.ai.chat.model.Generation;
 
@@ -14,8 +17,8 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.finos.fluxnova.bpm.engine.shared.model.Role.ASSISTANT;
-import static org.junit.jupiter.api.Assertions.*;
 
 class ConversationMapperTest {
 
@@ -27,7 +30,7 @@ class ConversationMapperTest {
     }
 
     @Test
-    void prependsSystemPromptAndAppendsContextOnEveryTurn() {
+    void toSpringAi_whenContextIsNonEmpty_emitsSystemPromptAndContextMessages() {
         AgentConfig config = agentConfig("You are a credit-check agent.");
         Map<String, Object> vars = new LinkedHashMap<>();
         vars.put("customerId", "c-42");
@@ -36,29 +39,31 @@ class ConversationMapperTest {
 
         List<Message> messages = mapper.toSpringAi(config, context, List.of());
 
-        assertEquals(2, messages.size());
-        assertEquals(MessageType.SYSTEM, messages.get(0).getMessageType());
-        assertEquals("You are a credit-check agent.", messages.get(0).getText());
-        assertEquals(MessageType.SYSTEM, messages.get(1).getMessageType());
-        assertTrue(messages.get(1).getText().contains("customerId = c-42"));
-        assertTrue(messages.get(1).getText().contains("applicationAmount = 10000"));
+        assertThat(messages).hasSize(2);
+        assertThat(messages.getFirst().getMessageType()).isEqualTo(MessageType.SYSTEM);
+        assertThat(messages.getFirst().getText()).isEqualTo("You are a credit-check agent.");
+        assertThat(messages.get(1).getMessageType()).isEqualTo(MessageType.SYSTEM);
+        assertThat(messages.get(1).getText())
+                .contains("customerId = c-42")
+                .contains("applicationAmount = 10000");
     }
 
     @Test
-    void emptyContextEmitsNoMessageEvenWithSystemPrompt() {
+    void toSpringAi_whenContextIsEmpty_emitsOnlySystemMessage() {
         AgentConfig config = agentConfig("sys");
         ResolvedContext context = new ResolvedContext(Map.of());
 
         List<Message> messages = mapper.toSpringAi(config, context, List.of());
 
-        assertEquals(1, messages.size(),
-                "empty context should not emit a system message");
-        assertEquals(MessageType.SYSTEM, messages.get(0).getMessageType());
-        assertEquals("sys", messages.get(0).getText());
+        assertThat(messages)
+                .as("empty context should not emit a context system message")
+                .hasSize(1);
+        assertThat(messages.getFirst().getMessageType()).isEqualTo(MessageType.SYSTEM);
+        assertThat(messages.getFirst().getText()).isEqualTo("sys");
     }
 
     @Test
-    void contextMessageContainsOnlyKeyValueLinesWithNoPrologue() {
+    void toSpringAi_whenContextIsNonEmpty_formatsVariablesAsKeyValueLinesWithoutPrologue() {
         AgentConfig config = agentConfig("sys");
         Map<String, Object> vars = new LinkedHashMap<>();
         vars.put("customerId", "c-1");
@@ -66,14 +71,14 @@ class ConversationMapperTest {
 
         List<Message> messages = mapper.toSpringAi(config, new ResolvedContext(vars), List.of());
 
-        assertEquals(2, messages.size());
-        String contextText = messages.get(1).getText();
-        assertEquals("customerId = c-1\namount = 250", contextText,
-                "context message should be raw key=value lines without prologue");
+        assertThat(messages).hasSize(2);
+        assertThat(messages.get(1).getText())
+                .as("context message should be raw key=value lines without prologue")
+                .isEqualTo("customerId = c-1\namount = 250");
     }
 
     @Test
-    void mapsEachConversationEntryByRole() {
+    void toSpringAi_whenHistoryContainsMixedRoles_mapsEachEntryToCorrectMessageType() {
         AgentConfig config = agentConfig("sys");
         ResolvedContext context = new ResolvedContext(Map.of());
 
@@ -87,23 +92,23 @@ class ConversationMapperTest {
         List<Message> messages = mapper.toSpringAi(config, context, history);
 
         // [system, user, assistant, tool] — empty context emits no trailing message
-        assertEquals(4, messages.size());
-        assertEquals(MessageType.SYSTEM, messages.get(0).getMessageType());
-        assertEquals(MessageType.USER, messages.get(1).getMessageType());
-        assertEquals(MessageType.ASSISTANT, messages.get(2).getMessageType());
+        assertThat(messages).hasSize(4);
+        assertThat(messages.getFirst().getMessageType()).isEqualTo(MessageType.SYSTEM);
+        assertThat(messages.get(1).getMessageType()).isEqualTo(MessageType.USER);
+        assertThat(messages.get(2).getMessageType()).isEqualTo(MessageType.ASSISTANT);
         AssistantMessage assistant = (AssistantMessage) messages.get(2);
-        assertEquals(1, assistant.getToolCalls().size());
-        assertEquals("call-1", assistant.getToolCalls().get(0).id());
-        assertEquals("creditScoreCheck", assistant.getToolCalls().get(0).name());
-        assertEquals(MessageType.TOOL, messages.get(3).getMessageType());
+        assertThat(assistant.getToolCalls()).hasSize(1);
+        assertThat(assistant.getToolCalls().getFirst().id()).isEqualTo("call-1");
+        assertThat(assistant.getToolCalls().getFirst().name()).isEqualTo("creditScoreCheck");
+        assertThat(messages.get(3).getMessageType()).isEqualTo(MessageType.TOOL);
         ToolResponseMessage toolResponse = (ToolResponseMessage) messages.get(3);
-        assertEquals(1, toolResponse.getResponses().size());
-        assertEquals("call-1", toolResponse.getResponses().get(0).id());
-        assertEquals("[score=720]", toolResponse.getResponses().get(0).responseData());
+        assertThat(toolResponse.getResponses()).hasSize(1);
+        assertThat(toolResponse.getResponses().getFirst().id()).isEqualTo("call-1");
+        assertThat(toolResponse.getResponses().getFirst().responseData()).isEqualTo("[score=720]");
     }
 
     @Test
-    void toLlmResponseExtractsTextAndToolCallsAndAppendsAssistantEntry() {
+    void toLlmResponse_whenResponseContainsToolCalls_extractsTextAndCallsAndAppendsAssistantEntry() {
         List<ConversationEntry> prior = List.of(ConversationEntry.user("please run a check"));
         AssistantMessage assistant = AssistantMessage.builder()
                 .content("Running credit check.")
@@ -113,48 +118,41 @@ class ConversationMapperTest {
 
         LlmResponse llm = mapper.toLlmResponse(response, prior);
 
-        assertEquals("Running credit check.", llm.assistantText());
-        assertEquals(1, llm.toolCalls().size());
-        assertEquals("call-1", llm.toolCalls().get(0).toolCallId());
-        assertEquals("creditScoreCheck", llm.toolCalls().get(0).toolId());
-
-        assertEquals(2, llm.updatedHistory().size());
+        assertThat(llm.assistantText()).isEqualTo("Running credit check.");
+        assertThat(llm.toolCalls()).hasSize(1);
+        assertThat(llm.toolCalls().getFirst().toolCallId()).isEqualTo("call-1");
+        assertThat(llm.toolCalls().getFirst().toolId()).isEqualTo("creditScoreCheck");
+        assertThat(llm.updatedHistory()).hasSize(2);
         ConversationEntry appended = llm.updatedHistory().get(1);
-        assertEquals(ASSISTANT, appended.role());
-        assertEquals("Running credit check.", appended.content());
-        assertEquals(1, appended.toolCalls().size());
+        assertThat(appended.role()).isEqualTo(ASSISTANT);
+        assertThat(appended.content()).isEqualTo("Running credit check.");
+        assertThat(appended.toolCalls()).hasSize(1);
     }
 
     @Test
-    void toLlmResponseHandlesEmptyToolCalls() {
+    void toLlmResponse_whenResponseHasNoToolCalls_returnsEmptyToolCallListAndAppendsAssistantEntry() {
         AssistantMessage assistant = new AssistantMessage("All done.");
         ChatResponse response = new ChatResponse(List.of(new Generation(assistant)));
 
         LlmResponse llm = mapper.toLlmResponse(response, List.of());
 
-        assertEquals("All done.", llm.assistantText());
-        assertTrue(llm.toolCalls().isEmpty(),
-                "empty tool calls signals 'done' to the caller");
-        assertEquals(1, llm.updatedHistory().size());
+        assertThat(llm.assistantText()).isEqualTo("All done.");
+        assertThat(llm.toolCalls())
+                .as("empty tool calls signals 'done' to the caller")
+                .isEmpty();
+        assertThat(llm.updatedHistory()).hasSize(1);
     }
 
     @Test
-    void omitsContextMessageWhenContextIsNull() {
+    void toSpringAi_whenContextIsNull_doesNotEmitContextMessage() {
         AgentConfig config = agentConfig("sys");
 
         List<Message> messages = mapper.toSpringAi(config, null,
                 List.of(ConversationEntry.user("hi")));
 
         // [system, user] — no context system message tacked on the end
-        assertEquals(2, messages.size());
-        assertEquals(MessageType.SYSTEM, messages.get(0).getMessageType());
-        assertEquals(MessageType.USER, messages.get(1).getMessageType());
-    }
-
-    @Test
-    void unusedTypesReferencedInSwitchCompile() {
-        // sanity: ensure UserMessage/SystemMessage are on the classpath at the imported names
-        assertNotNull(new UserMessage("u"));
-        assertNotNull(new SystemMessage("s"));
+        assertThat(messages).hasSize(2);
+        assertThat(messages.getFirst().getMessageType()).isEqualTo(MessageType.SYSTEM);
+        assertThat(messages.get(1).getMessageType()).isEqualTo(MessageType.USER);
     }
 }
